# pico-epd-driver

./: .lazy.lua  Cargo.toml  build.rs  memory.x
.cargo/: config.toml
examples/: draw_console.rs  draw_rect.rs
src/: lib.rs  ui.rs  usb_cdc.rs
src/console/: buffer.rs  mod.rs  ui.rs
src/epd_driver/: bus.rs  command.rs  driver.rs  error.rs  mod.rs
src/epd_driver/luts/: fast.rs  mod.rs  mode.rs  official.rs  terminal.rs
